# cnd-sfml-example

./: CMakeLists.txt  CMakePresets.json  README.md  root.cnd
binary_output_example/: CndSfmlApp.ilk-mask  CndSfmlApp.pdb-mask  INFO.md
